--- a/happy_page.html
+++ b/happy_page.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <img src="happy.gif" alt="Sad GIF">
+        <h3>javi mi se porukom, pošto ne znam šta si odgovorio (nemam bazu)</h3>
     </div>
 
     <script src="happy_page.js"></script>
